fix avatar misalignment in quotes block

--- a/express/blocks/quotes/quotes.css
+++ b/express/blocks/quotes/quotes.css
@@ -40,8 +40,10 @@ main .quotes .quote .author {
   align-self: baseline;
 }
 
-main .quotes .quote .author hr {
-  display: none;
+/* Flexbox layout for author-content to align image and summary */
+main .quotes .quote .author .author-content {
+  display: flex;
+  align-items: center; /* Align items vertically centered */
 }
 
 main .quotes .quote .author .image {
@@ -54,6 +56,13 @@ main .quotes .quote .author .image img {
   max-width: unset;
   border-radius: 21px;
   box-sizing: border-box;
+}
+
+main .quotes .quote .author .summary {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Center text vertically */
 }
 
 main .quotes .quote .author .summary p {
@@ -85,7 +94,6 @@ main .section.quotes-inverted-container .quote {
   background-color: var(--color-black);
   color: var(--color-white);
 }
-
 
 main .section.quotes-container h2,
 main .section.quotes-container h3,
